--- a/css/main.css
+++ b/css/main.css
@@ -102,16 +102,16 @@ h1, h2, h3, h4, h5, h6, p {
 // 	font-size:0;
 // 	overflow:hidden;
 // }
-@font-face {
-    font-family: 'icon';
-    src:url('../fonts/icon.eot');
-    src:url('../fonts/icond41d.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/icon.woff') format('woff'),
-        url('../fonts/icon.ttf') format('truetype'),
-        url('../fonts/icon.svg#icon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'icon';
+//     src:url('../fonts/icon.eot');
+//     src:url('../fonts/icond41d.eot?#iefix') format('embedded-opentype'),
+//         url('../fonts/icon.woff') format('woff'),
+//         url('../fonts/icon.ttf') format('truetype'),
+//         url('../fonts/icon.svg#icon') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
 
 
 /* ==========================================================================
@@ -435,7 +435,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 #home {
     background-color: rgba(0,0,0, .5);
-    background-image: url(../img/header-bg.jpg);
+    // background-image: url(../img/header-bg.jpg);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
