--- a/css/main.css
+++ b/css/main.css
@@ -435,13 +435,14 @@ h1, h2, h3, h4, h5, h6, p {
 
 #home {
     background-color: rgba(0,0,0, .5);
-    // background-image: url(../img/header-bg.jpg);
+    background-image: url(../img/header-bg.jpg);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     position: relative;
     text-align: center;
+    z-index: -1;
 }
 
 .overlay {
