--- a/css/mineFonts.css
+++ b/css/mineFonts.css
@@ -1,29 +1,29 @@
 
 @font-face {
     font-family: '小篆';
-    src: url('../fonts/小篆.eot'); 
-    src: url('../fonts/小篆.eot?#iefix') format('embedded-opentype'), 
-             url('../fonts/小篆.woff') format('woff'), 
-             url('../fonts/小篆.ttf')  format('truetype'),
-             url('../fonts/小篆.svg#小篆') format('svg'); 
+    src: url('../fonts/xz.eot'); 
+    src: url('../fonts/xz.eot?#iefix') format('embedded-opentype'), 
+             url('../fonts/xz.woff') format('woff'), 
+             url('../fonts/xz.ttf')  format('truetype'),
+             url('../fonts/xz.svg#xz') format('svg'); 
 }
 
 
 @font-face {
     font-family: '手写';
-    src: url('../fonts/纤细手写体.eot'); 
-    src: url('../fonts/纤细手写体.eot?#iefix') format('embedded-opentype'), 
-             url('../fonts/纤细手写体.woff') format('woff'), 
-             url('../fonts/纤细手写体.ttf')  format('truetype'),
-             url('../fonts/纤细手写体.svg#纤细手写体') format('svg'); 
+    src: url('../fonts/sxt.eot'); 
+    src: url('../fonts/sxt.eot?#iefix') format('embedded-opentype'), 
+             url('../fonts/sxt.woff') format('woff'), 
+             url('../fonts/sxt.ttf')  format('truetype'),
+             url('../fonts/sxt.svg#sxt') format('svg'); 
 }
 
 
-@font-face {
-    font-family: '苹果黑';
-    src: url('../fonts/苹果黑体-极细-简.eot'); 
-    src: url('../fonts/苹果黑体-极细-简.eot?#iefix') format('embedded-opentype'), 
-             url('../fonts/苹果黑体-极细-简.woff') format('woff'), 
-             url('../fonts/苹果黑体-极细-简.ttf')  format('truetype'),
-             url('../fonts/苹果黑体-极细-简.svg#苹果黑体-极细-简') format('svg'); 
-}
+// @font-face {
+//     font-family: '苹果黑';
+//     src: url('../fonts/苹果黑体-极细-简.eot'); 
+//     src: url('../fonts/苹果黑体-极细-简.eot?#iefix') format('embedded-opentype'), 
+//              url('../fonts/苹果黑体-极细-简.woff') format('woff'), 
+//              url('../fonts/苹果黑体-极细-简.ttf')  format('truetype'),
+//              url('../fonts/苹果黑体-极细-简.svg#苹果黑体-极细-简') format('svg'); 
+// }
